// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ThemeChoicePanel /> > custom theme > should display custom theme 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsSubsection mx_SettingsSubsection_newUi"
    data-testid="themePanel"
  >
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h2
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        Theme
      </h2>
    </div>
    <div
      class="mx_SettingsSubsection_content mx_SettingsSubsection_content_newUi"
    >
      <form
        class="_root_1o4d9_17"
      >
        <div
          class="_inline-field_1o4d9_33"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_udcm8_10"
            >
              <input
                class="_input_udcm8_24"
                id="radix-react-use-id-1"
                name="systemTheme"
                role="switch"
                title=""
                type="checkbox"
              />
              <div
                class="_ui_udcm8_34"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60"
              for="radix-react-use-id-1"
            >
              Match system theme
            </label>
          </div>
        </div>
      </form>
      <form
        class="_root_1o4d9_17 mx_ThemeChoicePanel_ThemeSelectors"
      >
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector mx_ThemeChoicePanel_themeSelector_enabled cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                checked=""
                class="_input_1ug7n_18"
                id="radix-react-use-id-2"
                name="themeSelector"
                title=""
                type="radio"
                value="light"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-2"
            >
              Light
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-dark"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-3"
                name="themeSelector"
                title=""
                type="radio"
                value="dark"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-3"
            >
              Dark
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-4"
                name="themeSelector"
                title=""
                type="radio"
                value="light-high-contrast"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-4"
            >
              High contrast
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-dark"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-5"
                name="themeSelector"
                title=""
                type="radio"
                value="custom-Alice theme"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-5"
            >
              Alice theme
            </label>
          </div>
        </div>
      </form>
    </div>
    <div
      class="_separator_13qwf_8"
      data-kind="primary"
      data-orientation="horizontal"
      role="separator"
    />
  </div>
</DocumentFragment>
`;

exports[`<ThemeChoicePanel /> > custom theme > should render the custom theme section 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsSubsection mx_SettingsSubsection_newUi"
    data-testid="themePanel"
  >
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h2
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        Theme
      </h2>
    </div>
    <div
      class="mx_SettingsSubsection_content mx_SettingsSubsection_content_newUi"
    >
      <form
        class="_root_1o4d9_17"
      >
        <div
          class="_inline-field_1o4d9_33"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_udcm8_10"
            >
              <input
                class="_input_udcm8_24"
                id="radix-react-use-id-1"
                name="systemTheme"
                role="switch"
                title=""
                type="checkbox"
              />
              <div
                class="_ui_udcm8_34"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60"
              for="radix-react-use-id-1"
            >
              Match system theme
            </label>
          </div>
        </div>
      </form>
      <form
        class="_root_1o4d9_17 mx_ThemeChoicePanel_ThemeSelectors"
      >
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector mx_ThemeChoicePanel_themeSelector_enabled cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                checked=""
                class="_input_1ug7n_18"
                id="radix-react-use-id-2"
                name="themeSelector"
                title=""
                type="radio"
                value="light"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-2"
            >
              Light
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-dark"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-3"
                name="themeSelector"
                title=""
                type="radio"
                value="dark"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-3"
            >
              Dark
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-4"
                name="themeSelector"
                title=""
                type="radio"
                value="light-high-contrast"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-4"
            >
              High contrast
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-dark"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-5"
                name="themeSelector"
                title=""
                type="radio"
                value="custom-Alice theme"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-5"
            >
              Alice theme
            </label>
          </div>
        </div>
      </form>
    </div>
    <div
      class="_separator_13qwf_8"
      data-kind="primary"
      data-orientation="horizontal"
      role="separator"
    />
  </div>
</DocumentFragment>
`;

exports[`<ThemeChoicePanel /> > renders the theme choice UI 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsSubsection mx_SettingsSubsection_newUi"
    data-testid="themePanel"
  >
    <div
      class="mx_SettingsSubsectionHeading"
    >
      <h2
        class="mx_Heading_h4 mx_SettingsSubsectionHeading_heading"
      >
        Theme
      </h2>
    </div>
    <div
      class="mx_SettingsSubsection_content mx_SettingsSubsection_content_newUi"
    >
      <form
        class="_root_1o4d9_17"
      >
        <div
          class="_inline-field_1o4d9_33"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_udcm8_10"
            >
              <input
                class="_input_udcm8_24"
                id="radix-react-use-id-1"
                name="systemTheme"
                role="switch"
                title=""
                type="checkbox"
              />
              <div
                class="_ui_udcm8_34"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60"
              for="radix-react-use-id-1"
            >
              Match system theme
            </label>
          </div>
        </div>
      </form>
      <form
        class="_root_1o4d9_17 mx_ThemeChoicePanel_ThemeSelectors"
      >
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector mx_ThemeChoicePanel_themeSelector_enabled cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                checked=""
                class="_input_1ug7n_18"
                id="radix-react-use-id-2"
                name="themeSelector"
                title=""
                type="radio"
                value="light"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-2"
            >
              Light
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-dark"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-3"
                name="themeSelector"
                title=""
                type="radio"
                value="dark"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-3"
            >
              Dark
            </label>
          </div>
        </div>
        <div
          class="_inline-field_1o4d9_33 mx_ThemeChoicePanel_themeSelector cpd-theme-light"
        >
          <div
            class="_inline-field-control_1o4d9_45"
          >
            <div
              class="_container_1ug7n_10"
            >
              <input
                class="_input_1ug7n_18"
                id="radix-react-use-id-4"
                name="themeSelector"
                title=""
                type="radio"
                value="light-high-contrast"
              />
              <div
                class="_ui_1ug7n_19"
              />
            </div>
          </div>
          <div
            class="_inline-field-body_1o4d9_39"
          >
            <label
              class="_label_1o4d9_60 mx_ThemeChoicePanel_themeSelector_Label"
              for="radix-react-use-id-4"
            >
              High contrast
            </label>
          </div>
        </div>
      </form>
    </div>
    <div
      class="_separator_13qwf_8"
      data-kind="primary"
      data-orientation="horizontal"
      role="separator"
    />
  </div>
</DocumentFragment>
`;
